--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   min-height:100vh ;
   border-radius: 10px;
   flex-direction: column;
-  background-color: #ffffff;
+  background-color: #DB0A40
 }
 
 @media(min-width:800px){
@@ -14,5 +14,6 @@
     padding: 0 100px;
     margin-top: 5vh;
     min-height: 90vh;  
+    background-color: #DB0A40
   }
 }
