--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,5 +1,9 @@
 .about {
     flex-grow: 1;
+    background-color: #121F45;
+    padding: 5%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
   
   .about h1 {
