--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -5,6 +5,12 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .home .name{
+    background-color:  #121F45;
+    border-radius: 5px;
+    padding: 20px;
+  }
   
   .home .title {
     width: 100%;
@@ -23,11 +29,12 @@
     cursor: pointer;
     font-size: 24px;
     margin-top: 30px;
-    color: #ffffff;
+    color: #DB0A40;
     padding: 10px 15px;
     border-radius: 999px;
-    background-color: #3f71f4;
+    background-color: #ffffff;
     font-family: "Righteous", cursive;
+    text-shadow: none;
   }
   
   .home .person {
@@ -41,6 +48,19 @@
     border-radius: 50%;
     
   }
+
+
+  .filtered{
+    background: #00c2ff;
+
+  }
+  .filtered img {
+    mix-blend-mode: screen;
+    -webkit-filter: grayscale(100%) contrast(200%);
+    filter: grayscale(100%) contrast(200%);
+    opacity: 1;
+  }
+  
   
   @media (min-width: 800px) {
     .home {
@@ -50,7 +70,7 @@
     .home .title,
     .home .person {
       width: 80%;
-      margin-top: 0;
+      margin-top: 10px;
       font-size: 25px;
     }
     .home .person img {
