--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 *{
   padding: 0;
   margin: 0;
+  color:white;
+  font-weight: bold;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 body {
@@ -10,7 +13,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #dde8fc;
+  background-color: #121F45;
 }
 /*esconde o scrollbar para chrome, safari e opera*/
 body::-webkit-scrollbar{
