--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,9 +6,11 @@
 footer {
     width: 100%;
     padding: 10px 0;
-    justify-content: center;
     text-align: center;
     background-color: #FFCC00;
+    display: grid;
+    grid-auto-flow: column;
+    grid-column-gap: auto;
   }
   
   footer img {
@@ -18,6 +20,7 @@ footer {
 
   footer a {
     justify-content: space-between;
+    font-size: 5vh;
   }
   
   footer img:not(:last-child) {
