--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,3 +1,21 @@
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-200%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .home {
     flex-grow: 1;
     min-width: 100%;
@@ -10,6 +28,16 @@
     background-color:  #121F45;
     border-radius: 5px;
     padding: 20px;
+    animation: 1s ease-out 0s 1 slideInFromLeft;
+    padding: 30px;
+    font-size: 3vh;    
+    margin-bottom: 10px;
+
+  }
+
+
+  span .spaceIcons{
+    margin-right: 5%;
   }
   
   .home .title {
@@ -45,13 +73,16 @@
   
   .home .person img {
     width: 80%;
-    border-radius: 50%;
+    border-radius: 10px;
+     /* This section calls the slideInFromLeft animation we defined above */
+    animation: 1s ease-out 0s 1 slideInFromTop;
+    padding: 30px;
     
   }
 
 
   .filtered{
-    background: #00c2ff;
+    background: #121F45;
 
   }
   .filtered img {
