--- a/src/components/Skills/style.css
+++ b/src/components/Skills/style.css
@@ -33,6 +33,6 @@
   
   @media (min-width: 800px) {
     .content {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
     }
   }
