--- a/src/AssetsComponents/Card/style.css
+++ b/src/AssetsComponents/Card/style.css
@@ -3,3 +3,34 @@
     margin: 1px; padding: 5px;
     border-radius: 5px;
 }
+
+.cardFeature {
+
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .cardFeature:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  .containerCard {
+    padding: 2px 16px;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+  }
