--- a/src/components/Skills/style.css
+++ b/src/components/Skills/style.css
@@ -13,7 +13,13 @@
   .content {
     display: grid;
     font-size: 24px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .content span{
+    min-height: 1em;
+    font-size: 70px;
+    white-space:nowrap;
   }
   
   .content div {
@@ -33,6 +39,10 @@
   
   @media (min-width: 800px) {
     .content {
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr;
+    }
+
+    .content span{
+      white-space:nowrap;
     }
   }
