--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   color:white;
   font-weight: bold;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  *text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 body {
