switched colors, update skills, timeline, removed map from contact me

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,19 @@
 .app {
   display: flex;
-  margin: 0 auto;
-  max-width: 1200px;
+  margin: auto;
+  max-width: 1800px;
   padding: 0 15px;
   min-height:100vh ;
   border-radius: 10px;
   flex-direction: column;
-  background-color: #DB0A40
+  background-color: #0F2D5B
 }
 
 @media(min-width:800px){
   .app{
-    padding: 0 100px;
+    padding: 0 20px;
     margin-top: 5vh;
     min-height: 90vh;  
-    background-color: #DB0A40
+    background-color: #0F2D5B
   }
 }
