--- a/src/AssetsComponents/Card/style.css
+++ b/src/AssetsComponents/Card/style.css
@@ -1,13 +1,13 @@
 .card{
-    background-color: #FFCC00;
-    margin: 1px; padding: 5px;
+    background-color: #0F2D5B;
+    margin: 0px; padding: 5px;
     border-radius: 5px;
 }
 
 .cardFeature {
 
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
   }
   
@@ -33,4 +33,13 @@
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
+  }
+
+  @media (min-width: 800px) {
+    .card{
+        background-color: #0F2D5B;
+        margin: 10px; padding: 0px;
+        border-radius: 5px;
+    }
+    
   }
