--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -16,3 +16,14 @@
     height: 400px;
     margin-bottom: 15px;
   }
+
+  p{
+    font-size: large;
+  }
+
+
+  @media(min-height:800px){
+    p{
+      font-size: xx-large;
+    }
+  }
