--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -7,7 +7,7 @@ footer {
     width: 100%;
     padding: 10px 0;
     text-align: center;
-    background-color: #FFCC00;
+    background-color: #DB0A40;
     display: grid;
     grid-auto-flow: column;
     grid-column-gap: auto;
