--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -12,7 +12,8 @@
   
   .logo {
     display: flex;
-    max-width: 100%;
+    max-width: 80%;
+    margin-top: 5%;
     height: 100%;
   }
   
@@ -104,5 +105,12 @@
       color: #333333;
       transform: scale(0.8);
       background: transparent;
+    }
+
+    .logo {
+      display: flex;
+      max-width: 100%;
+      margin-top: 0%;
+      height: 100%;
     }
   }
