--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   min-height:100vh ;
   border-radius: 10px;
   flex-direction: column;
-  background-color: #0F2D5B
+  background-color: #000000;
 }
 
 @media(min-width:800px){
@@ -14,6 +14,6 @@
     padding: 0 20px;
     margin-top: 5vh;
     min-height: 90vh;  
-    background-color: #0F2D5B
+    background-color: #000000
   }
 }
