--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,6 +1,6 @@
 .about {
     flex-grow: 1;
-    background-color: #121F45;
+    background-color: #ffffff;
     padding: 5%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -8,8 +8,12 @@
   
   .about h1 {
     margin-bottom: 20px;
+    color:#000000;
+    font-size: 4em;
   }
 
   .about p {
-    font-size: 1em;
+    font-size: 2.5em;
+    color:#000000;
+    padding: 10px;
   }
