--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -25,7 +25,7 @@
   }
 
   .home .name{
-    background-color:  #121F45;
+    background-color:  #000000;
     border-radius: 5px;
     padding: 20px;
     animation: 1s ease-out 0s 1 slideInFromLeft;
@@ -57,7 +57,7 @@
     cursor: pointer;
     font-size: 24px;
     margin-top: 30px;
-    color: #DB0A40;
+    color: #000000;
     padding: 10px 15px;
     border-radius: 999px;
     background-color: #ffffff;
@@ -72,7 +72,7 @@
   }
   
   .home .person img {
-    width: 80%;
+    width: 50%;
     border-radius: 50%;
      /* This section calls the slideInFromLeft animation we defined above */
     animation: 1s ease-out 0s 1 slideInFromTop;
@@ -82,7 +82,7 @@
 
 
   .filtered{
-    background: #121F45;
+    background: #ffffff;
 
   }
   .filtered img {
@@ -105,6 +105,6 @@
       font-size: 25px;
     }
     .home .person img {
-      width: 80%;
+      width: 50%;
     }
   }
