--- a/src/components/Skills/style.scss
+++ b/src/components/Skills/style.scss
@@ -1,6 +1,6 @@
 .skills {
     flex-grow: 1;
-    background-color: #121F45;
+    background-color: #000000;
     padding: 5%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
