--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #121F45;
+  *background-color: #121F45;
+  background-color: #000000;
 }
 /*esconde o scrollbar para chrome, safari e opera*/
 body::-webkit-scrollbar{
